<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineHorizontal"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintGuide_begin="73dp"
    app:layout_constraintStart_toStartOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineHorizontal3"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintGuide_percent="0.42"
    app:layout_constraintStart_toStartOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineVertical"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintGuide_percent="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/copyrightTextView"
    style="@style/TextViewRegular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    android:text="@string/by_waffiq"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/nameTextView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="44dp"
    android:layout_marginEnd="32dp"
    android:lines="1"
    android:maxLines="1"
    android:text=""
    android:textColor="@color/black"
    android:textSize="34sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal3" />

  <Button
    style="@style/BtnRegular"
    android:id="@+id/btn_logOut"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="24dp"
    android:backgroundTint="@color/red_200"
    android:layout_marginEnd="32dp"
    android:text="@string/logout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_add_story" />

  <Button
    style="@style/BtnRegular"
    android:id="@+id/btn_add_story"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="32dp"
    android:text="@string/add_story"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
    app:layout_constraintTop_toBottomOf="@+id/messageTextView" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="0dp"
    android:layout_height="150dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:src="@drawable/ic_group_5"
    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
    app:layout_constraintVertical_bias="1.0"
    android:contentDescription="@string/picture_logo" />

  <Button
    style="@style/BtnRegular"
    android:id="@+id/btn_lis_story"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="8dp"
    android:text="@string/list_story"
    app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/messageTextView" />

  <TextView
    android:id="@+id/messageTextView"
    style="@style/TextViewRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="32dp"
    android:text="@string/home_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nameTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>